force-app/main/default/objects/Lead/fields/CPQ_Account__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPQ Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (CPQ Account)</relationshipLabel>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>