force-app/main/default/objects/Lead/fields/CPQ_Contact__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPQ Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (CPQ Contact)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>