force-app/main/default/objects/Lead/fields/CPUs__c.field-meta.xml
<CustomField>
    <fullName>CPUs__c</fullName>
    <description>TCO Calculator Questions</description>
    <label>CPUs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dual Broadwell CPUs</fullName>
            </value>
            <value>
                <fullName>Dual Haswell CPUs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>