force-app/main/default/objects/Lead/fields/Create_Date_w_o_Time__c.field-meta.xml
<CustomField>
    <fullName>Create_Date_w_o_Time__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Date w/o Time</label>
    <type>Date</type>
</CustomField>