force-app/main/default/objects/Lead/fields/CreatedAt__c.field-meta.xml
<CustomField>
    <fullName>CreatedAt__c</fullName>
    <description>Marketo field for reporting</description>
    <label>CreatedAt</label>
    <type>DateTime</type>
</CustomField>