force-app/main/default/objects/Lead/fields/Current_Automotive_Platforms__c.field-meta.xml
<CustomField>
    <fullName>Current_Automotive_Platforms__c</fullName>
    <description>MKTO Field : last updated from text to text area long
3/18/2020: SDS-2128 - label changed to mimic the contact us form.</description>
    <label>Product Dev Status &amp; Platforms Used</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>