force-app/main/default/objects/Lead/fields/Data_Center_Budget__c.field-meta.xml
<CustomField>
    <fullName>Data_Center_Budget__c</fullName>
    <description>TCO Calculator Questions</description>
    <label>Data Center Budget</label>
    <length>255</length>
    <type>Text</type>
</CustomField>