force-app/main/default/objects/Lead/fields/Data_Types__c.field-meta.xml
<CustomField>
    <fullName>Data_Types__c</fullName>
    <label>Data Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Image</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Volumetric</fullName>
            </value>
            <value>
                <fullName>Speech/Audio</fullName>
            </value>
            <value>
                <fullName>Language/Text</fullName>
            </value>
            <value>
                <fullName>Time Series</fullName>
            </value>
            <value>
                <fullName>Genomic</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>