force-app/main/default/objects/Lead/fields/Date_Founded__c.field-meta.xml
<CustomField>
    <fullName>Date_Founded__c</fullName>
    <label>Date Founded</label>
    <type>Date</type>
</CustomField>