force-app/main/default/objects/Lead/fields/Days_Since_Last_Interesting_Moment__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Interesting_Moment__c</fullName>
    <description>As per Jira #SDS-2961</description>
    <formula>TODAY()  -  Last_Interesting_Moment_Date_conversion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Interesting Moment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>