force-app/main/default/objects/Lead/fields/DBA_Doing_Business_As__c.field-meta.xml
<CustomField>
    <fullName>DBA_Doing_Business_As__c</fullName>
    <label>DBA (Doing Business As)</label>
    <length>55</length>
    <type>Text</type>
</CustomField>