force-app/main/default/objects/Lead/fields/Delivery_Format__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Format__c</fullName>
    <description>For SDS-2226</description>
    <label>Delivery Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In person</fullName>
            </value>
            <value>
                <fullName>Virtual Delivery Platform - Other</fullName>
            </value>
            <value>
                <fullName>Virtual Delivery Platform - DLI provided</fullName>
            </value>
            <value>
                <fullName>In-person</fullName>
                <isActive>false</isActive>
                <label>In-person</label>
            </value>
            <value>
                <fullName>Live Online</fullName>
                <isActive>false</isActive>
                <label>Live Online</label>
            </value>
            <value>
                <fullName>Live Online - Other</fullName>
                <isActive>false</isActive>
                <label>Live Online - Other</label>
            </value>
            <value>
                <fullName>Live Online – DLI provided</fullName>
                <isActive>false</isActive>
                <label>Live Online – DLI provided</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>