force-app/main/default/objects/Lead/fields/Deployment_Model__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Model__c</fullName>
    <label>Deployment Model</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cloud API service</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>SaaS</fullName>
            </value>
            <value>
                <fullName>Software licensing (ISV on-premises)</fullName>
            </value>
            <value>
                <fullName>Appliance (on-premises)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>