force-app/main/default/objects/Lead/fields/Developing_your_own_Accelerated_Apps__c.field-meta.xml
<CustomField>
    <fullName>Developing_your_own_Accelerated_Apps__c</fullName>
    <inlineHelpText>Select the level of Accelerated Application usage</inlineHelpText>
    <label>Developing your own Accelerated Apps?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes, I am</fullName>
            </value>
            <value>
                <fullName>No, but I plan to</fullName>
            </value>
            <value>
                <fullName>No, but I use existing applications</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>