force-app/main/default/objects/Lead/fields/DGX_1_Customer__c.field-meta.xml
<CustomField>
    <fullName>DGX_1_Customer__c</fullName>
    <label>DGX-1 Customer?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Already Ordered</fullName>
            </value>
            <value>
                <fullName>Wants to learn more</fullName>
            </value>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>