force-app/main/default/objects/Lead/fields/Distribution_Relationships__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Relationships__c</fullName>
    <inlineHelpText>Identify any distribution relationships you currently hold</inlineHelpText>
    <label>Distribution Relationships</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arrow</fullName>
            </value>
            <value>
                <fullName>ASI Corporation</fullName>
            </value>
            <value>
                <fullName>D&amp;H Distributing</fullName>
            </value>
            <value>
                <fullName>Ingram Micro</fullName>
            </value>
            <value>
                <fullName>Ma Labs</fullName>
            </value>
            <value>
                <fullName>SED</fullName>
            </value>
            <value>
                <fullName>SuperMicro</fullName>
            </value>
            <value>
                <fullName>Synnex</fullName>
            </value>
            <value>
                <fullName>Tech Data</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Avnet Corporation</fullName>
            </value>
            <value>
                <fullName>PNY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>