force-app/main/default/objects/Lead/fields/DL_Frameworks__c.field-meta.xml
<CustomField>
    <fullName>DL_Frameworks__c</fullName>
    <label>DL Frameworks</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TensorFlow</fullName>
            </value>
            <value>
                <fullName>Torch</fullName>
            </value>
            <value>
                <fullName>Caffe</fullName>
            </value>
            <value>
                <fullName>Theano</fullName>
            </value>
            <value>
                <fullName>CNTK</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Chainer</fullName>
            </value>
            <value>
                <fullName>MXNet</fullName>
            </value>
            <value>
                <fullName>KALDI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>