force-app/main/default/objects/Lead/fields/DLI_Account_Email_if_different__c.field-meta.xml
<CustomField>
    <fullName>DLI_Account_Email_if_different__c</fullName>
    <description>For DLI Instructor Lead process (SDS-2586)</description>
    <label>DLI Account Email (if different)</label>
    <type>Email</type>
</CustomField>