force-app/main/default/objects/Lead/fields/DLI_Region__c.field-meta.xml
<CustomField>
    <fullName>DLI_Region__c</fullName>
    <description>For DLI Instructor Lead process (SDS-2586)</description>
    <label>DLI Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Israel</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>ROAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>