force-app/main/default/objects/Lead/fields/DLI_Sales_Advisor__c.field-meta.xml
<CustomField>
    <fullName>DLI_Sales_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DLI Sales Advisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leadsdlisa</relationshipName>
    <type>Lookup</type>
</CustomField>