force-app/main/default/objects/Lead/fields/Do_you_have_a_virtualized_envi__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_virtualized_envi__c</fullName>
    <label>Virtualized Environment (VDI)?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No plans at this time</fullName>
            </value>
            <value>
                <fullName>Not familiar with VDI</fullName>
            </value>
            <value>
                <fullName>Already Deployed VDI</fullName>
            </value>
            <value>
                <fullName>Already Deployed Graphics Accelerated VDI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>