force-app/main/default/objects/Lead/fields/Docusign_Line_FirstLastname__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Line_FirstLastname__c</fullName>
    <formula>FirstName  &amp; &quot; &quot; &amp;  LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Docusign_Line FirstLastname</label>
    <type>Text</type>
</CustomField>