force-app/main/default/objects/Lead/fields/Docusign_Line_for_Competency_Exhibit__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Line_for_Competency_Exhibit__c</fullName>
    <formula>&quot;Competency Exhibit(s): &quot;
&amp;
lEFT((
IF (INCLUDES(Approved_Competencies__c ,&quot;Compute&quot; ),&quot; Compute,&quot;,null) &amp;
IF (INCLUDES(Approved_Competencies__c ,&quot;Visualization&quot;), &quot; Visualization,&quot;,null) &amp;
IF (INCLUDES(Approved_Competencies__c ,&quot;Compute DGX&quot;), &quot; Compute DGX,&quot;,null) &amp;
IF (INCLUDES(Approved_Competencies__c ,&quot;DGX&quot;), &quot; DGX,&quot;,null) &amp;
IF (INCLUDES(Approved_Competencies__c ,&quot;Embedded Edge&quot;), &quot; Embedded Edge,&quot;,null) &amp;
IF (INCLUDES(Approved_Competencies__c ,&quot;Virtualization&quot; ), &quot; Virtualization,&quot;,null) &amp;
IF (INCLUDES(Approved_Competencies__c ,&quot;&quot;), null,null)
),
LEN(
IF (INCLUDES(Approved_Competencies__c ,&quot;Compute&quot; ),&quot; Compute,&quot;,null) &amp;
IF (INCLUDES(Approved_Competencies__c ,&quot;Visualization&quot;), &quot; Visualization,&quot;,null) &amp;
IF (INCLUDES(Approved_Competencies__c ,&quot;Compute DGX&quot;), &quot; Compute DGX,&quot;,null) &amp;
IF (INCLUDES(Approved_Competencies__c ,&quot;DGX&quot;), &quot; DGX,&quot;,null) &amp;
IF (INCLUDES(Approved_Competencies__c ,&quot;Embedded Edge&quot;), &quot; Embedded Edge,&quot;,null) &amp;
IF (INCLUDES(Approved_Competencies__c ,&quot;Virtualization&quot; ), &quot; Virtualization,&quot;,null) &amp;
IF (INCLUDES(Approved_Competencies__c ,&quot;&quot;), null,null)
)-1)</formula>
    <label>Docusign_Line for Competency Exhibit</label>
    <type>Text</type>
</CustomField>