force-app/main/default/objects/Lead/fields/Docusign_Line_Lastname__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Line_Lastname__c</fullName>
    <formula>&quot;Dear &quot; &amp; FirstName &amp;&quot;, &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Docusign_Line Lastname</label>
    <type>Text</type>
</CustomField>