force-app/main/default/objects/Lead/fields/Docusign_Line_Program_Level__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Line_Program_Level__c</fullName>
    <formula>text(Program_Level__c)  &amp; &quot; Level&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Docusign_Line Program Level</label>
    <type>Text</type>
</CustomField>