force-app/main/default/objects/Lead/fields/DR_Additional_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>DR_Additional_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Sales/Account Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Additional Team Member)</relationshipLabel>
    <relationshipName>DealRegATMLeads</relationshipName>
    <type>Lookup</type>
</CustomField>