force-app/main/default/objects/Lead/fields/DR_Additional_Team_Member_Email__c.field-meta.xml
<CustomField>
    <fullName>DR_Additional_Team_Member_Email__c</fullName>
    <label>Partner Sales/Account Manager Email</label>
    <type>Email</type>
</CustomField>