force-app/main/default/objects/Lead/fields/DR_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>DR_Approved_Date__c</fullName>
    <label>Approved Date</label>
    <type>DateTime</type>
</CustomField>