force-app/main/default/objects/Lead/fields/DR_Approved_Date_Channel_Admin__c.field-meta.xml
<CustomField>
    <fullName>DR_Approved_Date_Channel_Admin__c</fullName>
    <label>Approved Date (Channel Admin)</label>
    <type>DateTime</type>
</CustomField>