force-app/main/default/objects/Lead/fields/DR_Approved_Date_Date__c.field-meta.xml
<CustomField>
    <fullName>DR_Approved_Date_Date__c</fullName>
    <formula>DATEVALUE(DR_Approved_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DR Approved Date (Date)</label>
    <type>Date</type>
</CustomField>