force-app/main/default/objects/Lead/fields/DR_Approved_Date_SalesRep__c.field-meta.xml
<CustomField>
    <fullName>DR_Approved_Date_SalesRep__c</fullName>
    <label>Approved Date (SalesRep)</label>
    <type>DateTime</type>
</CustomField>