force-app/main/default/objects/Lead/fields/DR_ChannelAdmin__c.field-meta.xml
<CustomField>
    <fullName>DR_ChannelAdmin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>