force-app/main/default/objects/Lead/fields/DR_Create_to_Approval__c.field-meta.xml
<CustomField>
    <fullName>DR_Create_to_Approval__c</fullName>
    <description>Registration created to approved in days.</description>
    <formula>DR_Approved_Date_Date__c - Create_Date_w_o_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DR Create to Approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>