force-app/main/default/objects/Lead/fields/DR_Deal_Qualified_Date__c.field-meta.xml
<CustomField>
    <fullName>DR_Deal_Qualified_Date__c</fullName>
    <label>Date Deal Qualified</label>
    <type>Date</type>
</CustomField>