force-app/main/default/objects/Lead/fields/DR_Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>DR_Deal_Type__c</fullName>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DGX</fullName>
            </value>
            <value>
                <fullName>vGPU</fullName>
            </value>
            <value>
                <fullName>Titan</fullName>
            </value>
            <value>
                <fullName>Jetson</fullName>
            </value>
            <value>
                <fullName>Server</fullName>
            </value>
            <value>
                <fullName>Workstation</fullName>
            </value>
            <value>
                <fullName>DLI</fullName>
            </value>
            <value>
                <fullName>Quadro</fullName>
            </value>
            <value>
                <fullName>Parabricks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>