force-app/main/default/objects/Lead/fields/DR_Denied_Date__c.field-meta.xml
<CustomField>
    <fullName>DR_Denied_Date__c</fullName>
    <label>Denied Date</label>
    <type>Date</type>
</CustomField>