force-app/main/default/objects/Lead/fields/DR_Denied_Date_Channel_Admin__c.field-meta.xml
<CustomField>
    <fullName>DR_Denied_Date_Channel_Admin__c</fullName>
    <label>Denied Date (Channel Admin)</label>
    <type>DateTime</type>
</CustomField>