force-app/main/default/objects/Lead/fields/DR_Denied_Date_SalesRep__c.field-meta.xml
<CustomField>
    <fullName>DR_Denied_Date_SalesRep__c</fullName>
    <label>Denied Date (SalesRep)</label>
    <type>DateTime</type>
</CustomField>