force-app/main/default/objects/Lead/fields/DR_Is_Approved_by_Channel_Admin__c.field-meta.xml
<CustomField>
    <fullName>DR_Is_Approved_by_Channel_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approved by Channel Admin</label>
    <type>Checkbox</type>
</CustomField>