force-app/main/default/objects/Lead/fields/DR_Is_Approved_by_SalesRep__c.field-meta.xml
<CustomField>
    <fullName>DR_Is_Approved_by_SalesRep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approved by SalesRep</label>
    <type>Checkbox</type>
</CustomField>