force-app/main/default/objects/Lead/fields/DR_Is_Denied_by_SalesRep__c.field-meta.xml
<CustomField>
    <fullName>DR_Is_Denied_by_SalesRep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Denied by SalesRep</label>
    <type>Checkbox</type>
</CustomField>