force-app/main/default/objects/Lead/fields/DR_Is_Resubmitted__c.field-meta.xml
<CustomField>
    <fullName>DR_Is_Resubmitted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SDS-1698- Sales: Allow for update and Resubmit Jetson Registrations</description>
    <label>Is Resubmitted</label>
    <type>Checkbox</type>
</CustomField>