force-app/main/default/objects/Lead/fields/DR_Is_Submitted__c.field-meta.xml
<CustomField>
    <fullName>DR_Is_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Submitted</label>
    <type>Checkbox</type>
</CustomField>