force-app/main/default/objects/Lead/fields/DR_Is_Submitted_via_Btn_Click__c.field-meta.xml
<CustomField>
    <fullName>DR_Is_Submitted_via_Btn_Click__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Submitted via Btn Click?</label>
    <type>Checkbox</type>
</CustomField>