force-app/main/default/objects/Lead/fields/DR_Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>DR_Lead_Type__c</fullName>
    <label>Lead Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>